# lab_1_drivers

./: README.md
cpp/lib/mcc_usb_1608fs_plus/: CMakeLists.txt  DEPENDENCIES  README
cpp/lib/pololu/: CMakeLists.txt  DEPENDENCIES  README  driver_pololu.cpp  driver_pololu_test.cpp  original_chmod_ttymxc3  pololu_control  programming_arduino_on_udoo  setvialcm.py  test_pololu.cpp  testread.py  testwrite.py  thread_test.cpp
cpp/lib/pololu/pololu_arduino/: pololu_arduino.ino
cpp/lib/sandshark_msgs/: CMakeLists.txt  DEPENDENCIES  README
cpp/lib/sandshark_msgs/msg/: Altitude.msg  Depth.msg  GPS.msg  MotionCorrected.msg  MotionRaw.msg  OrientationDebug.msg  OrientationEuler.msg  OrientationQuaternion.msg  Speed.msg
python/razor_imu/: DEPENDENCIES  README  accel_gyro_calibration.py  magnetometer_calibration.py  razor.py  set_calibration_values.py  visualization.py
